5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1791_3136.log
== TEST (2019-05-29 14:32:16) 
-- CODE:
from numpy import* 
vet = array[n]
n = (" ")
while(n<=0):
	print(round(x,n))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:33:32) 
-- CODE:
from numpy import* 
vet = input(array[""])
while(n<=0):
	print(round(x,n))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:33:55) 
-- CODE:
from numpy import* 
vet = input(array(eval("")
while(n<=0):
	print(round(x,n))

-- ERROR:
File "XXXX", line 3
    while(n<=0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:34:11) 
-- CODE:
from numpy import* 
vet = input(array(eval("")
if (n<=0):
	print(round(x,n))

-- ERROR:
File "XXXX", line 3
    if (n<=0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
